[package]
name = "rust-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }

[dependencies]

ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0"
serde_repr = "0.1.7"
futures = "0.3.19"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
itertools = "0.10.2"
eyre = "0.6.6"
phf = { version = "0.10", features = ["macros"] }
log = "0.4.16"
env_logger = "0.9.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.4"
bus = "2.2.3"
base64 = "0.13.0"
nix = "0.23.1"
